--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,16 +10,20 @@
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": ".",
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
     "importHelpers": true,
     "strictNullChecks": true,
-    "esModuleInterop": true,
+    // "suppressImplicitAnyIndexErrors": true,
+    // https://github.com/Microsoft/TypeScript/issues/28762#issuecomment-443406607
+    // "allowSyntheticDefaultImports": true,
     "noUnusedLocals": true
   },
   "include": [
+    "lib/**/*"
   ],
   "exclude": [
     "node_modules",
