--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.1.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
+    "dart-sass": "^1.25.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
     "react-test-renderer": "^16.13.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "svg-sprite-loader": "^5.0.0",
     "ts-jest": "^26.1.3",
     "typescript": "^3.9.7",
