--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^26.0.7",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^16.9.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.1.0",
     "cross-env": "^7.0.2",
