--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@types/enzyme": "^3.10.5",
     "@types/jest": "^26.0.7",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
@@ -32,6 +33,8 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
     "dart-sass": "^1.25.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
     "react-test-renderer": "^16.13.1",
