--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dart-sass": "^1.25.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
     "react-router-dom": "^5.2.0",
