--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
+    "prism-react-renderer": "^1.1.1",
     "raw-loader": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^16.13.1",
