--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^26.1.0",
     "prism-react-renderer": "^1.1.1",
     "raw-loader": "^4.0.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^16.13.1",
     "sass": "^1.26.10",
